--- a/src/pages/generals/pair-picking/[...slug].astro
+++ b/src/pages/generals/pair-picking/[...slug].astro
@@ -5,7 +5,9 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
 import type { CollectionEntry } from "astro:content";
 import { getEntry, getCollection } from "astro:content";
 
-import { ConflictDatum } from "@schemas/conflictSchemas";
+import AllGenerals from "@components/general/AllGenerals.astro"
+import AllConflicts from "@components/general/AllConflicts.astro"
+
 
 const DEBUG = false;
 
@@ -29,23 +31,6 @@ if (entry === undefined) {
   return Astro.redirect("/404");
 }
 
-if (Array.isArray(Astro.locals.ConflictData)) {
-  const ConflictCollection: CollectionEntry<"generalConflictData">[] =
-    await getCollection("generalConflictData");
-  if (ConflictCollection !== undefined && ConflictCollection !== null) {
-    await Promise.all(
-      ConflictCollection.map(async ({ data }) => {
-        const v1 = await ConflictDatum.spa(data);
-        if (v1.success) {
-          Astro.locals.ConflictData.push(v1.data);
-        }
-      }),
-    );
-    if (DEBUG) {
-      console.log(`conflictData is ${Astro.locals.ConflictData.length}`);
-    }
-  }
-}
 
 const { Content } = await entry.render();
 ---
@@ -58,5 +43,7 @@ const { Content } = await entry.render();
   }}
 >
   {DEBUG && `Dynamic Template`}
+  <AllGenerals></AllGenerals>
+  <AllConflicts></AllConflicts>
   <Content />
 </StarlightPage>
