--- a/src/components/general/pairing/AttackPairs.astro
+++ b/src/components/general/pairing/AttackPairs.astro
@@ -4,11 +4,13 @@ export const prerender = false;
 import { getCollection, type CollectionEntry, } from "astro:content";
 import type { ComponentProps } from "astro/types";
 
+import {ulid} from 'ulidx'
+
 import {GridGeneral} from './GridGeneral'
 
 import {delay} from 'nanodelay';
 
-//import { DisplayGrid} from './display-grid';
+import { DisplayGrid } from './DisplayGrid';
 
 
 import {
@@ -39,7 +41,7 @@ interface Props {
 
 const {generalClass} = Astro.props;
 
-//const table_name = `${Astro.url.pathname}-${ulid()}`
+const table_name = `${Astro.url.pathname}-${ulid()}`
 
 let allGenerals = new Array<GeneralElementType>();
 
@@ -61,15 +63,14 @@ let MyInvestmentLevel: BuffParamsType = {
 
 ---
 
-<div class="table-container">
-  <!-- <DisplayGrid
+<div class="table-container non-content">
+  test
+  <DisplayGrid
     tableName={table_name}
     InvestmentLevel={MyInvestmentLevel}
     DisplayPairs={Astro.locals.CachedPairs}
     client:only="lit"
-  >
-
-  </DisplayGrid> -->
+  ></DisplayGrid>
   
 <style>
   .table-container {
