--- a/src/components/general/AllGenerals.astro
+++ b/src/components/general/AllGenerals.astro
@@ -17,7 +17,7 @@ import {
   type ExtendedGeneralType,
 } from "@schemas/ExtendedGeneral";
 
-const DEBUG = true;
+const DEBUG = false;
 
 const generalObjects: CollectionEntry<"generals">[] =
   await getCollection("generals");
