a reasonably formatted except no icons table with data

--- a/src/components/general/AllPairs.astro
+++ b/src/components/general/AllPairs.astro
@@ -3,8 +3,6 @@ import { delay } from "nanodelay";
 
 import { BaseN } from "js-combinatorics";
 
-import { AscendingLevels, type BuffParamsType } from "@schemas/baseSchemas";
-
 import { 
   GeneralClass,
   type GeneralClassType,
@@ -15,7 +13,7 @@ import {
 import { type ConflictDatumType } from "@schemas/conflictSchemas";
 import type { GeneralPairType } from "@schemas/ExtendedGeneral";
 
-const DEBUG = true;
+const DEBUG = false;
 
 interface Props {
   TargetClass: generalSpecialistsType;
